--- a/Command_Recognition.ipynb
+++ b/Command_Recognition.ipynb
@@ -3016,6 +3016,20 @@
     "imported = tf.saved_model.load(\"saved\")\n",
     "imported(waveform[tf.newaxis, :])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I wanted to base my final project around audio classification because it was something I have always been interested in and I also want to gain more experience with NLP in the future. I learned alot about what features are important for uniquely identifying sound waves and how to incoperate them into a model to learn how to classify them. I also feel like I have a mcuh better understanding of convolutional neural networks and how all the features of the model affect model accuracy because of the time spent tuning the model to get the results I did. For instance, I learned that regularizing may help with preventing overfitting data but in some cases it drastically increases training time and can affect how long it takes for the model to converge so it must be used sparingy. I also learned the importance of where dropout and pooling layers are located in a models arcitechture and how their rates can improve or harm the models performance. Overall, I think i may have been able to get the model to perform better by increasing the size of the resizing layer or adding more layers to my model. However, the processing power of my laptop limits me from making overly complex models since training takes so long to converge."
+   ]
   }
  ],
  "metadata": {
