--- a/RealTimeCommands.ipynb
+++ b/RealTimeCommands.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -38,22 +38,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS Amplitude: 1286.4211\n",
+      "RMS Amplitude: 1916.4381\n",
+      "right\n",
+      "RMS Amplitude: 1531.6527\n",
+      "yes\n",
+      "RMS Amplitude: 2111.777\n",
+      "yes\n",
+      "RMS Amplitude: 5320.574\n",
       "down\n",
-      "RMS Amplitude: 1021.05707\n",
-      "left\n",
-      "RMS Amplitude: 1566.0948\n",
-      "left\n",
-      "RMS Amplitude: 1363.005\n",
-      "right\n",
-      "RMS Amplitude: 1756.1716\n",
-      "up\n",
-      "RMS Amplitude: 1960.9751\n",
+      "RMS Amplitude: 10244.967\n",
       "go\n",
-      "RMS Amplitude: 1468.2092\n",
-      "no\n",
-      "RMS Amplitude: 502.51624\n",
+      "RMS Amplitude: 3456.8477\n",
+      "up\n",
+      "RMS Amplitude: 2668.3184\n",
+      "down\n",
+      "RMS Amplitude: 2768.1492\n",
+      "left\n",
+      "RMS Amplitude: 2181.8079\n",
       "right\n",
+      "RMS Amplitude: 2569.1086\n",
+      "up\n",
+      "RMS Amplitude: 727.5566\n",
+      "right\n",
+      "RMS Amplitude: 2265.7942\n",
+      "up\n",
+      "RMS Amplitude: 726.19226\n",
+      "yes\n",
+      "RMS Amplitude: 1776.0574\n",
+      "up\n",
       "Stopping audio capture...\n"
      ]
     },
@@ -64,7 +76,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 36\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;66;03m# Read audio data from the stream\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m         data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfromstring(\u001b[43mstream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCHUNK_SIZE\u001b[49m\u001b[43m)\u001b[49m, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mint16)\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;66;03m# Convert the data to numpy array for further processing\u001b[39;00m\n\u001b[0;32m     39\u001b[0m         audio_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconvert_to_tensor(data, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "Cell \u001b[1;32mIn[57], line 36\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;66;03m# Read audio data from the stream\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m         data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfromstring(\u001b[43mstream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCHUNK_SIZE\u001b[49m\u001b[43m)\u001b[49m, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mint16)\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;66;03m# Convert the data to numpy array for further processing\u001b[39;00m\n\u001b[0;32m     39\u001b[0m         audio_data \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconvert_to_tensor(data, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n",
       "File \u001b[1;32mc:\\Users\\lucas\\OneDrive\\Documents\\Stevens\\EE_628\\628_Final_Project\\venv3.9\\lib\\site-packages\\pyaudio\\__init__.py:570\u001b[0m, in \u001b[0;36mPyAudio.Stream.read\u001b[1;34m(self, num_frames, exception_on_overflow)\u001b[0m\n\u001b[0;32m    567\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_input:\n\u001b[0;32m    568\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot input stream\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    569\u001b[0m                   paCanNotReadFromAnOutputOnlyStream)\n\u001b[1;32m--> 570\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpa\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_stream\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    571\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mexception_on_overflow\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mOSError\u001b[0m: [Errno -9988] Stream closed"
      ]
@@ -80,9 +92,6 @@
     "CHANNELS = 1\n",
     "RATE = 16000\n",
     "CHUNK_SIZE = 16000\n",
-    "\n",
-    "# Threshold for audio volume\n",
-    "THRESHOLD = 2048  # Adjust this value according to your needs\n",
     "\n",
     "label_names = ['down', 'go', 'left', 'no', 'right', 'stop', 'up', 'yes']\n",
     "\n",
