--- a/Command_Recognition.ipynb
+++ b/Command_Recognition.ipynb
@@ -2899,7 +2899,7 @@
     }
    ],
    "source": [
-    "x = data_dir/'go/0d53e045_nohash_0.wav'  #'no/01bb6a2a_nohash_0.wav'\n",
+    "x = data_dir/'go/0d53e045_nohash_0.wav' \n",
     "x = tf.io.read_file(str(x))\n",
     "x, sample_rate = tf.audio.decode_wav(x, desired_channels=1, desired_samples=SAMPLING_RATE,)\n",
     "x = tf.squeeze(x, axis=-1)\n",
@@ -2928,6 +2928,13 @@
    "metadata": {},
    "source": [
     "### 5.4 Exporting the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write the exporter class for easier exporting"
    ]
   },
   {
@@ -2968,6 +2975,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the model to a chosen directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -2990,6 +3004,13 @@
     "export(tf.constant(str(data_dir/'no/01bb6a2a_nohash_0.wav')))\n",
     "tf.saved_model.save(export, \"saved\")\n",
     "'''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Double check to see if the model saved properly"
    ]
   },
   {
